--- a/d3.css
+++ b/d3.css
@@ -143,6 +143,7 @@ background-color: gray;
 .description{
     padding: 10%;
     color: white;
+    width: 50%;
 }
 .button1{
     background-color: green;
@@ -151,17 +152,30 @@ background-color: gray;
     padding: 10px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
-/* .round{
-    position: inherit;
-    height: 50px !important;
-    width: 50px !important;
+.round{
+    position: absolute;
+    /* height: 50px !important;
+    width: 50px !important; */
         border-radius: 50%;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
+   background: rgb(248, 248, 248);
+   padding: 1%;
+ margin-left: 600px;
+ margin-top: 100px;
+}
+.round2{
+    position: absolute;
+    /* height: 50px !important;
+    width: 50px !important; */
+        border-radius: 50%;
+    -webkit-border-radius: 55px;
+    -moz-border-radius: 55px;
    background: rgb(156, 209, 78);
    padding: 1%;
- margin: 0px;
-} */
+ margin-left: 700px;
+ margin-top: 130px;
+}
 .domain{
     float: left;
     background-color: rgb(107, 161, 26);
